Feat (Income mutations): Adds mutations for incomes and also adds tests.